Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6673

NRS crash when applying tunings

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

      A dangerous timeframe exists after enabling a NRS policy where setting a policy-specific tuning would lead to crashes, due to incomplete initialization of the policy.

      Trivial reproducer:
      echo -n orr > /proc/fs/lustre/ost/OSS/ost_io/nrs_policies & sleep 0.1 && echo -n 32 > /proc/fs/lustre/ost/OSS/ost_io/nrs_orr_quantum

            emoly.liu Emoly Liu
            hdoreau Henri Doreau (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: