LU-6673 ptlrpc: Forbid too early NRS policy tunings

Wait for a NRS policy to be fully started before allowing
to apply related tunings, so that all fields are properly
initialized.

Add corresponding test to sanityn.

Signed-off-by: Henri Doreau <henri.doreau@cea.fr>
Change-Id: I92df8f55aebd173a26979e9a506c45f985107d8a
Reviewed-on: http://review.whamcloud.com/15104
Tested-by: Jenkins
Reviewed-by: Emoly Liu <emoly.liu@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>